Fixanje erroja, pri editanju, deletanju, addanju oddelka, narejen gumb za odjavo, na page oddelki dodana funkcija za vnasanje v dve tabeli

--- a/Zivalske_Ordinacije/Zivalske_Ordinacije.csproj
+++ b/Zivalske_Ordinacije/Zivalske_Ordinacije.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.Core" Version="1.28.0" />
     <PackageReference Include="Npgsql" Version="7.0.2" />
   </ItemGroup>
 
